docs: Colocando primeira parte da aula 1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,8 +21,8 @@ theme:
     - content.code.annotation
     - content.code.copy
   language: pt-BR
-  favicon: assets/google-37.png
-  logo: assets/google-37.png
+  favicon: asstes/logounb_doc.svg
+  logo: asstes/logounb_doc.svg
   palette:
     - scheme: default
       toggle:
