Adicionando parte 2 mod_2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
     - Parte 2: mod_1/mod1_2.md
   - Módulo 2 - Linguagem SQL DDL:
     - Parte 1: mod_2/mod2_1.md
+    - Parte 2: mod_2/mod2_2.md
     - Trbalho 2: mod_2/trab_2.md
 
 theme:
