Adicionando parte 2 mod_2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ nav:
   - Módulo 2 - Linguagem SQL DDL:
     - Parte 1: mod_2/mod2_1.md
     - Parte 2: mod_2/mod2_2.md
-    - Trbalho 2: mod_2/trab_2.md
+    - Trabalho 2: mod_2/trab_2.md
 
 theme:
   name: material
